# vaccel-virtio-common

./: .gitignore  NOTICE  README.md  meson.build
.github/workflows/: main-build-and-upload.yml  pr-build-and-verify.yml  pr-trailers.yml
include/: meson.build
include/pack/: blob.h  meson.build  types.h
include/vaccel-virtio-common/: core.h  meson.build
include/vaccel-virtio-common/pack/: path.h  resource.h  torch.h
src/: meson.build
src/pack/: blob.c  meson.build  path.c  resource.c  torch.c
